--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+
+fonts : font-family: 'Roboto', sans-serif;
+*/
+
 * {
     margin: 0;
     padding: 0;
@@ -50,7 +55,7 @@ header {
     top: 0;
     left: auto;
     right: 0;
-    background-color: #111;
+    background-color: #ffffff;
     /* Black*/
     overflow-x: hidden;
     /* Disable horizontal scroll */
@@ -65,21 +70,23 @@ header {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: red;
     display: block;
     transition: 0.3s;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidebar a:hover {
-    color: #f1f1f1;
+    color: #ffb0b0;
 }
 
 /* Position and style the close button (top right corner) */
 .sidebar .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    color: black;
+    right: 5px;
     font-size: 36px;
     margin-left: 50px;
 }
@@ -88,15 +95,13 @@ header {
 .openbtn {
     font-size: 20px;
     cursor: pointer;
-    background-color: #111;
-    color: white;
+    background-color: white;
+    color: black;
     padding: 10px 15px;
     border: none;
 }
 
-.openbtn:hover {
-    background-color: #444;
-}
+
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 
