--- a/style.css
+++ b/style.css
@@ -110,15 +110,7 @@ header {
 
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidebar {
-        padding-top: 15px;
-    }
 
-    .sidebar a {
-        font-size: 18px;
-    }
-}
 
 .hero-img {
     display: flex;
@@ -158,4 +150,22 @@ header {
     text-decoration: none;
     padding: 5px;
     font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (max-height: 450px) {
+    .sidebar {
+        padding-top: 15px;
+    }
+
+    .sidebar a {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (max-width: 350px) {
+    .hero-img {
+        width: 100vw;
+        height: 100vh;
+    }
 }
