--- a/style.css
+++ b/style.css
@@ -10,13 +10,23 @@ fonts : font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color: #f0f0f0;
+    background-color: white;
     overflow-x: hidden;
     width: 100%;
 }
 
 header {
     width: 100vw;
+  position: fixed;
+    box-shadow: 0px 2px 2px #414141;
+}
+
+h3 {
+    font-weight: 500;
+}
+
+span {
+    font-weight: 600;
 }
 
 .logo {
@@ -71,7 +81,8 @@ header {
 .sidebar a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.5em;
+    ;
     color: red;
     display: block;
     transition: 0.3s;
@@ -137,14 +148,13 @@ header {
     color: rgba(255, 255, 255, 0.92);
     font-size: 3.0rem;
     font-family: 'Roboto', sans-serif;
-    margin-bottom:
 }
 
 .hero-btn {
     margin: 4%;
     background-color: red;
     width: ;
-    font-size: 0.6rem;
+    font-size: 0.65rem;
 }
 
 .hero-btn a {
@@ -156,11 +166,7 @@ header {
 }
 
 
-.sidebar a {
-    font-size: 18px;
-}
 
-}
 
 
 
@@ -182,17 +188,139 @@ header {
 
 }
 
-.material-icons {}
+.material-icons {
+    padding: 10px;
+    margin:5px;
+    border: 2px solid red;
+    border-radius: 30px;
+    background-color: white;
+    
+}
 
 
 
 .search-btn {
     background-color: white;
-    border:none;
+    border: none;
     padding: 2px;
 }
 
-.search-bar    {
+.search-bar {
     width: 100%;
     border: none;
+}
+
+.account-btn {
+    width: 50%;
+    height: 7vh;
+    background-color: red;
+    text-align: center;
+    display: block;
+    border: solid red;
+}
+
+
+
+.account-form-flex {
+    display: flex;
+    flex-direction: row;
+    align-content: flex-end;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.account-btn2 {
+    display: block;
+    width: 50%;
+    height: 7vh;
+    background-color: white;
+    text-align: center;
+    display: block;
+    border: solid white;
+    font-weight: 100;
+}
+
+.progress-box-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.course-promt {
+    margin: 30px 10px 0px 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.course-details {
+    background-color: #ffffff;
+    margin: 10px;
+    border: solid 1px #bababa;
+    border-radius: 6px;
+}
+
+.progress-promt {
+    padding: 15px 10px;
+    width: 50%;
+    font-family: 'Roboto', sans-serif;
+    ;
+}
+
+.progress-completion {
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+    padding: 15px 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.progress-flex {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px 0px
+}
+
+.progress-promt-text {
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
+.progress-tags {
+    display: flex;
+    flex-direction: column;
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.progress-prompt-location {
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.progress-promt-percent {
+    align-content: center;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.progress-tag-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.row-title {
+    font-family: 'Roboto', sans-serif;
+    padding:20px;
+    font-size: 1.1rem;
+    font-weight: 300
+}
+
+.row-name {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
 }
