--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 header {
     width: 100vw;
-  position: fixed;
+    position: fixed;
     box-shadow: 0px 2px 2px #414141;
 }
 
@@ -190,11 +190,7 @@ span {
 
 .material-icons {
     padding: 10px;
-    margin:5px;
-    border: 2px solid red;
-    border-radius: 30px;
-    background-color: white;
-    
+    margin: 5px;
 }
 
 
@@ -288,6 +284,7 @@ span {
 .progress-tags {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     background-color: #f0f0f0;
     border: none;
     border-radius: 5px;
@@ -304,6 +301,8 @@ span {
     align-content: center;
     font-weight: 600;
     font-size: 1.2rem;
+    color: Black;
+    border-bottom: solid 3px red;
 }
 
 .progress-tag-row {
@@ -311,17 +310,66 @@ span {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width:100%;
 }
 
 .row-title {
-    font-family: 'Roboto', sans-serif;
-    padding:20px;
-    font-size: 1.1rem;
-    font-weight: 300
-}
-
-.row-name {
+    display: flex;
+    justify-content: flex-end;
     font-family: 'Roboto', sans-serif;
     font-size: 1.1rem;
     font-weight: 300;
+    padding-right:10px;
+}
+
+.row-name {
+    justify-content: flex-end;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+#progress-icons {
+    border: 2px solid red;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.dif-material-icon {
+    padding: 10px;
+    margin: 5px;
+    background-color: red;
+}
+
+#dif-material-icon {
+    padding: 10px;
+    margin: 5px;
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+}
+
+.progress-box-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    background-color: white;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
+.progress-btn {
+    text-decoration: none;
+    color: black;
+}
+
+.flex-title-name {
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    
 }
