--- a/style.css
+++ b/style.css
@@ -236,16 +236,23 @@ span {
     background-color: #f0f0f0;
 }
 
-.progress-box-flex {
+.box-flex {
     display: flex;
     flex-direction: column;
     margin: 15px;
 }
 
-.course-promt {
-    margin: 30px 10px 0px 10px;
+.prompt {
+    margin: 30px 10px 0px 0px;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.34rem;
+    margin-bottom: 5%
 }
+
+.course-alert {
+    margin-left: 10px;
+}
+
 
 .course-details {
     background-color: #ffffff;
@@ -390,4 +397,119 @@ span {
     font-size: 1.1rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+}
+
+.new-and-noteworthy-title {}
+
+.course-box {
+    border-top: 8px solid red;
+    box-shadow: 0px 2px 2px 2px #ededed;
+    height: 30vh;
+    margin-bottom: 8%;
+}
+
+.course-text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #5a5b5e;
+    margin-bottom: 1.125rem;
+    margin-left: 20px;
+    margin-top: 10px;
+
+}
+
+.course-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.course-disc {
+
+    margin: 20px;
+    color: gray;
+    line-height: 1.5;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.community-contact-flex {
+    padding-left: 20px;
+}
+
+.im {
+    margin: 0px 15px 0px 0px;
+}
+
+.im-github {}
+
+.card-grid {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5%;
+    height: 25vh
+}
+
+.card-details {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+
+
+.card-title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.card-link-div {}
+
+.card-link {
+    color: #3069f0;
+}
+
+footer {
+    border-top: 1px solid #dddddd;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.legal-form-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.privacy-policy {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin: 10px 10px 20px 10px;
+    color: #4b35ef;
+}
+
+.devider {
+    color: black;
+    margin: 0px 5px
+}
+
+.made-in-tags {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin: 10px 10px 20px 10px;
 }
