--- a/style.css
+++ b/style.css
@@ -130,10 +130,10 @@ span {
 	align-items: center;
 	text-align: center;
 	flex-direction: column;
-	background-image: url(https://www.washingtonpost.com/resizer/l0oCu0gt1Lm8Q4rSAiQdu8A2QaE=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CASLCTVV5EI6TLGIDWCHXLGKOM.jpg);
+	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.14), rgba(0, 0, 0, 0.44)), url(https://www.washingtonpost.com/resizer/l0oCu0gt1Lm8Q4rSAiQdu8A2QaE=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CASLCTVV5EI6TLGIDWCHXLGKOM.jpg);
 	background-size: cover;
 	background-position-x: center;
-	background-position-y:top;
+	background-position-y: top;
 	background-repeat: no-repeat;
 	width: 100%;
 	height: 100vh;
@@ -182,7 +182,7 @@ span {
 
 .material-icons {
 	padding: 10px;
-	margin-left:5px;
+	margin-left: 5px;
 }
 
 
@@ -524,9 +524,10 @@ footer {
 .main-container {
 	position: relative;
 }
-@media only screen and (min-width:866){
-	[class*="hero-img"]{
-		height:80vh;
-		font-size:40px;
+
+@media only screen and (min-width:866) {
+	[class*="hero-img"] {
+		height: 80vh;
+		font-size: 40px;
 	}
 }
